--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: black;
+    text-align: center;
+    letter-spacing: 0.15rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +15,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1{
+  font-size: 3.5rem;
+  margin-top: 2rem;
+}
+
+h2{
+  font-size: 2rem;
+}
+
+li{
+  list-style: none;
+  text-align: center;
+}
+
+.basic, .education, .xp{
+  margin-bottom: 2rem;
 }
